updating the repository

--- a/Decision Tree Classifier .ipynb
+++ b/Decision Tree Classifier .ipynb
@@ -37,13 +37,12 @@
    "source": [
     "with open(\"spambase.names\") as spam:\n",
     "    text = spam.read()\n",
-    "labels = re.findall(r'\\n(\\w*_?\\W?):', text)\n",
+    "    labels = re.findall(r'\\n(\\w*_?\\W?):', text)\n",
     "#labels.append('Class')\n",
     "Data_set = pd.read_csv(\"spambase.data\", header=None, names=labels +['spam']) \n",
     "# spam = spamData.pop('spam')\n",
-    "\n",
     "Data_array=Data_set.values\n",
-    "# print(Data_array)\n"
+    "# print(Data_array)"
    ]
   },
   {
